2010-01-13  Werner Koch  <wk@g10code.com>

	Release 1.1.1.

2010-01-12  Werner Koch  <wk@g10code.com>

	* po/POTFILES.in (explorers.cpp, inspectors.cpp, mailitem.cpp): New.

2010-01-08  Werner Koch  <wk@g10code.com>

	* forms/encr-s.ico, forms/sign-s.ico: Fix them.

2010-01-05  Werner Koch  <wk@g10code.com>

	Release 1.1.0.

2009-12-22  Werner Koch  <wk@g10code.com>

	* forms/encr-l.ico, forms/encr-s.ico: Update.
	* forms/sign-l.ico, forms/encr-l.ico: Update.

2009-11-02  Werner Koch  <wk@g10code.com>

	* forms/Makefile.am (cfg_english): New.

2009-10-30  Werner Koch  <wk@g10code.com>

	* forms/Makefile.am (icons): Udpate all icons.

2009-10-08  Werner Koch  <wk@g10code.com>

	* configure.ac (CFLAGS): Add -fno-strict-aliasing.

2009-09-28  Werner Koch  <wk@g10code.com>

	Release 1.0.1.

2009-08-28  Werner Koch  <wk@g10code.com>

	* configure.ac [GCC]: Test for -Wno-pointer-sign.

2009-06-18  Werner Koch  <wk@g10code.com>

	Release 1.0.0.

2009-02-27  Werner Koch  <wk@g10code.com>

	Release 0.10.19.

2009-01-28  Werner Koch  <wk@g10code.com>

	Release 0.10.18.

	* po/de.po: s/Unterschrift/Signatur/.

2008-11-14  Werner Koch  <wk@g10code.com>

	Release 0.10.17.

2008-11-11  Werner Koch  <wk@g10code.com>

	Release 0.10.16.

2008-10-27  Werner Koch  <wk@g10code.com>

	* forms/gpgol-cs_de.cfg: New.

2008-08-06  Werner Koch  <wk@g10code.com>

	Release 0.10.15.

	* forms/sign-l.ico, forms/sign-s.ico: New.
	* forms/encr-l.ico, forms/encr-s.ico: New

2008-08-04  Werner Koch  <wk@g10code.com>

	* Makefile.am (SUBDIRS): Add forms.
	* forms/Makefile.am: New.
	* forms/gpgol_de.cfg, forms/gpgol-ms_de.cfg: New.
	
2008-06-04  Werner Koch  <wk@g10code.com>

	* doc/gpgol.texi (Assuan Protocol): Remove protocol specs.  They
	are now part of the GPGME manual.

2008-05-28  Werner Koch  <wk@g10code.com>

	* Release 0.10.14.

2008-05-06  Werner Koch  <wk@g10code.com>

	* Release 0.10.13.

2008-04-16  Werner Koch  <wk@g10code.com>

	* Release 0.10.12.
