@@ -1,3 +1,8 @@
+2010-04-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* engine-assuan.c (connect_uiserver): Update to new libassuan
+	interface.
+
 2010-01-13  Werner Koch  <wk@g10code.com>
 
 	* README.icons: Change instructions to better cope with alpha
