@@ -1,3 +1,9 @@
+2010-04-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* configure.ac (NEED_LIBASSUAN_API, NEED_LIBASSUAN_VERSION): Bump
+	to 2/2.0.0.
+	(_ASSUAN_ONLY_GPG_ERRORS): Remove.
+
 2010-01-13  Werner Koch  <wk@g10code.com>
 
 	Release 1.1.1.
